crates/reap-okx-live-adapter/tests/ui/mutation_authorities_are_linear.stderr
error[E0277]: the trait bound `BoundRegularOrderGateway: Clone` is not satisfied
 --> tests/ui/mutation_authorities_are_linear.rs:8:21
  |
8 |     require_clone::<BoundRegularOrderGateway>();
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `BoundRegularOrderGateway`
  |
note: required by a bound in `require_clone`
 --> tests/ui/mutation_authorities_are_linear.rs:5:21
  |
5 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`

error[E0277]: the trait bound `LiveSafety: Clone` is not satisfied
 --> tests/ui/mutation_authorities_are_linear.rs:9:21
  |
9 |     require_clone::<LiveSafety>();
  |                     ^^^^^^^^^^ the trait `Clone` is not implemented for `LiveSafety`
  |
note: required by a bound in `require_clone`
 --> tests/ui/mutation_authorities_are_linear.rs:5:21
  |
5 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`

error[E0277]: the trait bound `PrivateStateSessionFactory: Clone` is not satisfied
  --> tests/ui/mutation_authorities_are_linear.rs:10:21
   |
10 |     require_clone::<PrivateStateSessionFactory>();
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `PrivateStateSessionFactory`
   |
note: required by a bound in `require_clone`
  --> tests/ui/mutation_authorities_are_linear.rs:5:21
   |
 5 | fn require_clone<T: Clone>() {}
   |                     ^^^^^ required by this bound in `require_clone`
