crates/reap-okx-live-adapter/tests/ui/mutation_authorities_are_linear.rs
use reap_okx_live_adapter::{
    BoundRegularOrderGateway, LiveSafety, PrivateStateSessionFactory,
};

fn require_clone<T: Clone>() {}

fn main() {
    require_clone::<BoundRegularOrderGateway>();
    require_clone::<LiveSafety>();
    require_clone::<PrivateStateSessionFactory>();
}
